--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Sagor Vaiyya</h1>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem quisquam architecto, nisi vel facere ratione accusantium quibusdam molestiae aut nam minus officia error obcaecati dolorum? Labore laborum voluptas quam ullam.</p>
+<p>Jahid Hossain Sagur</p>
 </body>
 </html>
